--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
 
         <section class="play-ground">
 
-            <div>
+            <div class="flex flex-col items-center gap-20 pt-20">
                 <!-- screen -->
-                <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3]">1024×320
+                <div
+                    class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3]">
+                    <div class="flex justify-center">
+                        <p class="bg-[#2F2941] text-white px-6 pb-5 rounded-b-xl">Don't watch keyboard  while playing...</p>
+                    </div>
+                    <div class="flex justify-center items-center h-full">
+                        <p class="text-black text-9xl font-bold">Y</p>
+                    </div>
 
                 </div>
 
@@ -75,6 +82,19 @@
                 </div>
                 <!-- keybord end-->
                 <!-- Life score-->
+                <div class="flex justify-between w-3/6">
+                    <button class="btn rounded-full bg-[#894189] text-white px-4">
+                        Life
+                        <img src="images/hert.svg" alt="">
+                        <span>1</span>
+                        
+                    </button>
+                    <button class="btn rounded-full bg-[#894189] text-white px-4">
+                        Score
+                        <img src="images/dollar.svg" alt="">
+                        <span>1</span>
+                    </button>
+                </div>
             </div>
         </section>
 
