--- a/index.html
+++ b/index.html
@@ -16,29 +16,31 @@
 
 <body class="font-poppins">
     <main class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center">
-        <!-- Home screen -->
+        <!-- Home screen start-->
 
-        <section class="home min-h-screen text-white flex  justify-center items-center hidden">
+        <section id="home-screen" class="min-h-screen text-white flex  justify-center items-center">
             <div class="flex flex-col items-center gap-8">
                 <h1 class="text-8xl font-anton uppercase">ALPHABET CLASH pro</h1>
                 <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-                <button class="btn bg-white text-black">Play Now</button>
+                <button onclick="play()" class="btn bg-white text-black">Play Now</button>
             </div>
         </section>
+        <!-- Home screen end-->
 
         <!-- Play ground -->
 
-        <section class="play-ground">
+        <section id="play-ground" class="hidden">
 
             <div class="flex flex-col items-center gap-20 pt-20">
                 <!-- screen -->
                 <div
                     class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3]">
                     <div class="flex justify-center">
-                        <p class="bg-[#2F2941] text-white px-6 pb-5 rounded-b-xl">Don't watch keyboard  while playing...</p>
+                        <p class="bg-[#2F2941] text-white px-6 pb-5 rounded-b-xl">Don't watch keyboard while playing...
+                        </p>
                     </div>
                     <div class="flex justify-center items-center h-full">
-                        <p class="text-black text-9xl font-bold">Y</p>
+                        <p id="current-alphabet" class="text-black text-9xl font-bold uppercase">Y</p>
                     </div>
 
                 </div>
@@ -47,37 +49,37 @@
 
                 <div>
                     <div class="my-1 flex w-full justify-center gap-1">
-                        <kbd class="kbd">q</kbd>
-                        <kbd class="kbd">w</kbd>
-                        <kbd class="kbd">e</kbd>
-                        <kbd class="kbd">r</kbd>
-                        <kbd class="kbd">t</kbd>
-                        <kbd class="kbd">y</kbd>
-                        <kbd class="kbd">u</kbd>
-                        <kbd class="kbd">i</kbd>
-                        <kbd class="kbd">o</kbd>
-                        <kbd class="kbd">p</kbd>
+                        <kbd id="q" class="kbd">q</kbd>
+                        <kbd id="w" class="kbd">w</kbd>
+                        <kbd id="e" class="kbd">e</kbd>
+                        <kbd id="r" class="kbd">r</kbd>
+                        <kbd id="t" class="kbd">t</kbd>
+                        <kbd id="y" class="kbd">y</kbd>
+                        <kbd id="u" class="kbd">u</kbd>
+                        <kbd id="i" class="kbd">i</kbd>
+                        <kbd id="o" class="kbd">o</kbd>
+                        <kbd id="p" class="kbd">p</kbd>
                     </div>
                     <div class="my-1 flex w-full justify-center gap-1">
-                        <kbd class="kbd">a</kbd>
-                        <kbd class="kbd">s</kbd>
-                        <kbd class="kbd">d</kbd>
-                        <kbd class="kbd">f</kbd>
-                        <kbd class="kbd">g</kbd>
-                        <kbd class="kbd">h</kbd>
-                        <kbd class="kbd">j</kbd>
-                        <kbd class="kbd">k</kbd>
-                        <kbd class="kbd">l</kbd>
+                        <kbd id="a" class="kbd">a</kbd>
+                        <kbd id="s" class="kbd">s</kbd>
+                        <kbd id="d" class="kbd">d</kbd>
+                        <kbd id="f" class="kbd">f</kbd>
+                        <kbd id="g" class="kbd">g</kbd>
+                        <kbd id="h" class="kbd">h</kbd>
+                        <kbd id="j" class="kbd">j</kbd>
+                        <kbd id="k" class="kbd">k</kbd>
+                        <kbd id="l" class="kbd">l</kbd>
                     </div>
                     <div class="my-1 flex w-full justify-center gap-1">
-                        <kbd class="kbd">z</kbd>
-                        <kbd class="kbd">x</kbd>
-                        <kbd class="kbd">c</kbd>
-                        <kbd class="kbd">v</kbd>
-                        <kbd class="kbd">b</kbd>
-                        <kbd class="kbd">n</kbd>
-                        <kbd class="kbd">m</kbd>
-                        <kbd class="kbd">/</kbd>
+                        <kbd id="z" class="kbd">z</kbd>
+                        <kbd id="x" class="kbd">x</kbd>
+                        <kbd id="c" class="kbd">c</kbd>
+                        <kbd id="v" class="kbd">v</kbd>
+                        <kbd id="b" class="kbd">b</kbd>
+                        <kbd id="n" class="kbd">n</kbd>
+                        <kbd id="m" class="kbd">m</kbd>
+                        <kbd id="/" class="kbd">/</kbd>
                     </div>
                 </div>
                 <!-- keybord end-->
@@ -87,7 +89,7 @@
                         Life
                         <img src="images/hert.svg" alt="">
                         <span>1</span>
-                        
+
                     </button>
                     <button class="btn rounded-full bg-[#894189] text-white px-4">
                         Score
@@ -98,11 +100,24 @@
             </div>
         </section>
 
+        <!-- Play ground end -->
 
-        <section class="score">
+        <!-- Final score start  -->
+        <section class="score flex justify-center items-center min-h-screen hidden">
+            <div class="text-white text-center space-y-6 bg-[#FFFFFF33] p-4 rounded-lg">
+                <h1 class="text-8xl">
+                    <span class="font-extrabold">Score:</span>
+                    <span>14</span>
+                </h1>
+                <button class="btn">Play Again</button>
+                <p>Practice will make you Pro</p>
 
+            </div>
         </section>
     </main>
+
+    <script src="scripts/alpha-clash.js"></script>
+    <script src="scripts/utility.js"></script>
 </body>
 
 </html>
