--- a/index.html
+++ b/index.html
@@ -83,18 +83,23 @@
                     </div>
                 </div>
                 <!-- keybord end-->
+
                 <!-- Life score-->
                 <div class="flex justify-between w-3/6">
-                    <button class="btn rounded-full bg-[#894189] text-white px-4">
+
+                    <!-- display score -->
+                    <button class="btn rounded-full bg-purple-500 text-white px-4">
                         Life
                         <img src="images/hert.svg" alt="">
-                        <span>1</span>
+                        <span id="current-life">5</span>
 
                     </button>
-                    <button class="btn rounded-full bg-[#894189] text-white px-4">
+
+                    <!-- display score -->
+                    <button class="btn rounded-full  bg-purple-700 text-white px-4">
                         Score
                         <img src="images/dollar.svg" alt="">
-                        <span>1</span>
+                        <span id="current-score">0</span>
                     </button>
                 </div>
             </div>
