--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 </h1>
                 <button onclick="play()" class="btn">Play Again</button>
                 <p>Practice will make you Pro</p>
+                <p class="font-bold">Copyright © 2024 - All right reserved by KAWSAR</p>
 
             </div>
         </section>
